--- a/mainheader.html
+++ b/mainheader.html
@@ -29,9 +29,8 @@
 				</form>
 			</span>	
 
-			<span id="accounticon"><img src="img/accounticon.svg"></span>
-			<span id="bagicon"><img src="img/bagicon.svg"></span>
-			
+			<span id="accounticon"><img src="img/accounticon.png"></span>
+			<span id="bagicon"><img src="img/bagicon.png"></span>	
 			
 		</div>
 	</header>
